--- a/admin-panel/src/index.css
+++ b/admin-panel/src/index.css
@@ -1,9 +1,19 @@
+@font-face {
+  font-family: 'LPMQ IsepMisbah';
+  src: url('/fonts/LPMQ_IsepMisbah.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base {
-  html, body {
+
+  html,
+  body {
     overscroll-behavior-y: none;
     height: 100%;
     @apply font-display antialiased text-text-dark dark:text-text-light bg-background-light dark:bg-background-dark;
